# generate_django_file

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: .env.example
gdf/: ma.py  main.py
gdf/generations/: __init__.py  admin.py  init_serializers.py  routers.py  serializers.py  views.py  views_this_rules.py
gdf/helpers/: __init__.py  analysis_file_model.py
gdf/main/: application.py  cli.py  options.py
gdf/sample/: example_routers.py  example_rules.py  example_tests.py  example_views_this_rules.py
src/: 12313  clear.py  generate_sample.py  main.py
src/generations/: __init__.py  admin.py  conftest.py  init_serializers.py  init_views.py  routers.py  rules.py  serializers.py  tests.py  views.py  views_this_rules.py
src/helpers/: __init__.py  analization.py  analysis_file_model.py  helper.py  preparation.py
src/models/: __init__.py
src/sample/: example_admin.py  example_init.py  example_init_serializer.py  example_routers.py  example_serializers.py  example_tests.py  example_views.py  example_views_this_rules.py
src/sample/conftest/: conftest_factory.py  conftest_fixture.py  conftest_import.py
src/settings/: __init__.py  common.py
src/utils/: __init__.py  analization.py  utils.py
