[tool.poetry]
name = "generate-django-file"
version = "0.1.0"
description = "Django app with generate file for django rest framework."
authors = ["BigBread57"]
license = "MIT"

packages = [
  { include = "src"},
]


[tool.poetry.dependencies]
python = ">=3.8,<4"
flake8 = "^4.0.1"  # https://github.com/PyCQA/flake8
python-dotenv = "^0.20.0"  # https://github.com/theskumar/python-dotenv
typer = "^0.4.1"  # https://github.com/tiangolo/typer

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
