# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html

[metadata]
name = generate-django-file
version = 0.1
description = Django app with generate file for django rest framework.
long_description = file: README.md
url = https://github.com/BigBread57/generate_django_file
author = Gleb Mazur
author_email = amzur.gleb2010@yandex.ru
license = MIT
license_file = LICENSE
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  License :: Custom
  Operating System :: Linux
  Programming Language :: Python
  Programming Language :: Python 3
  Programming Language :: Python 3.9

[options]
install_requires =
    typer=^0.4.1
python_requires = >=3.9

[flake8]
# flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = nova
show-source = True
statistics = False
doctests = True
enable-extensions = G
nested-classes-whitelist = NovaMeta,Meta,Params
pytest-fixture-no-parentheses = True
count = True